# zed-cairo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  extension.toml  extension.wasm
.github/: release.yml
.github/workflows/: release.yml
example_scarb_repo/: Scarb.toml
grammars/: cairo.wasm
languages/cairo/: captures.toml  config.toml  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm  runnables.scm  tasks.json  textobjects.scm
src/: cairo.rs  lib.rs  main.rs
