[package]
name = "zed_cairo"
version = "0.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zed_extension_api = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"

[lib]
path = "src/cairo.rs"
crate-type = ["cdylib"]
